# otus_10

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  console_handler.cpp  console_handler.h  file_handler.cpp  file_handler.h  handler.h  logger.cpp  logger.h  main.cpp  queue.h  record.cpp  record.h  state_machine.cpp  state_machine.h  statistic.cpp  statistic.h  thread_console_handler.cpp  thread_console_handler.h  thread_file_handler.cpp  thread_file_handler.h
